--- a/css/style1.css
+++ b/css/style1.css
@@ -3,26 +3,38 @@
 *:after {
   box-sizing: border-box;
 }
+body{
+  width: 360px;
+  margin: 0 auto;
+}
+
 h1 {
-  font: 20px/1.8 "Roboto Condensed", Helvetica, Arial, sans-serif;
+  font: 20px/1.8 arial;
+  text-align: center;
+  text-transform: uppercase;
+  margin-bottom: 20px;
  
   }
 h2 {
-  font: 18px/1.6 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  
+  font: 18px/1.6 "Helvetica Neue", Helvetica, Arial, sans-serif;  
   }
+
 p {
   font: 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
  
 }
+
 .c1 {
   text-align: center;
   margin: auto;
 }
 
-.foot {
-  
+.foot {  
   font: 12px/1.2 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #a9a9b0;
+  text-align: center;
+  margin-top: 5px;
+  margin-bottom: 20px;
   
   }
 
@@ -45,34 +57,54 @@ input {
 }
 legend {
   font: 16px/1.4 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  padding-top: 10px;
   
 }
 .account-info {
   padding: 20px 20px 0 20px;
+  text-align: left;
+  
 }
 .account-info label {
   color: #395870;
   display: block;
+  padding-top: 11px;
+  margin-bottom: 0px;
+  
+
   
 }
 .account-info input {
   background: #fff;
   border: 1px solid #c6c7cc;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, .1);
-  color: #636466;
-  
+  color: #636466;  
   width: 100%;
+  margin-top: 5px;
+  padding-top: 6px;
+  
+  
 }
 .account-info select {
   background: #fff;
   border: 1px solid #c6c7cc;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, .1);
   color: #636466;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  margin-top: 5px;
+  font-size: 11px;
+  
+}
+.account-info select option{
+ padding-left: 40px ;
   
 }
 .account-action {
   background: #f0f0f2;
   border-top: 1px solid #c6c7cc;
+  padding-top: 20px;
+  line-height: 1em;
   
 }
 .account-action .btn {
@@ -81,13 +113,44 @@ legend {
   color: #fff;
   cursor: pointer;
   
+  padding: 8px 18px 8px 18px;
+  margin: 10px 6px 30px 6px;
+  font-weight: bold;
+ 
+  
 }
 .account-action label {
   color: #7c7c80;
   font-size: 11px;
-  
+    
 }
+
 input[type="text"], input[type="email"],  select, textarea {
   width: 100%;
  
+}
+
+.notnull{
+  font-size: 11px;
+  padding-top: 4px;
+  padding-bottom: 6px;
+  
+}
+.country{
+  margin-bottom: 2px;
+}
+.account-info label .phone{
+  margin-bottom: 2px;
+}
+.account-info input[type="password"]{
+  margin-bottom: 1px;
+  padding-bottom: 6px;
+  margin-top: 2px;
+}
+.account-info input[type="password2"]{
+  margin-bottom: 14px;  
+  padding-bottom: 6px;
+}
+.email{
+  margin-bottom: 2px;
 }
