--- a/css/style2.css
+++ b/css/style2.css
@@ -1,54 +1,63 @@
 body{
-    font-family: Arial, Helvetica, sans-serif;       
+    font-family: Verdana;       
 }
 
 h1{
-    font-size: 24px;
-    color: rgb(7, 90, 159); 
+    font-size: 22px;
+    color: rgba(80, 118, 155, 1); 
     font-weight:400;
-    margin-bottom: 20px;
+    margin-bottom: 19px;
 }
 h2{
-    font-size: 22px;
-    color: rgb(7, 90, 159);   
+    font-size: 20px;
+    color:rgba(80, 118, 155, 1);
+    margin-top: 20px;  
+    margin-bottom: 20px; 
+}
+.education{
+    font-size: 20px;
+    color:rgba(80, 118, 155, 1);
+    margin-top: 14px;  
+    margin-bottom: 19px; 
 }
 h3{
-    font-size: 17px;
-    font-weight: 200;
-    color: rgb(7, 90, 159);  
-    margin-top: 40px;
-    margin-bottom: 8px;
+    font-size: 16px;
+    color: rgba(80, 118, 155, 1);  
+    margin-top: 52px;
+    margin-bottom: 15px;
 }
 h4{
-    font-size: 17px;
-    font-weight: 200;
-    color: rgb(7, 90, 159);  
-    margin-top: 10px;
-    margin-bottom: 7px;
+    font-size: 16px;    
+    color: rgba(80, 118, 155, 1);  
+    margin-top: 14px;
+    margin-bottom: 15px;
 }
 
 .line{    
-    border-bottom: 2px solid rgba(230, 235, 241, 1);
+    border-bottom: 3px solid rgba(230, 235, 241, 1);
 }
-
+.line2{   
+    border-bottom: 3px solid rgba(230, 235, 241, 1);
+}
 .container {
     display: flex;
     align-items: center;
 }
 
 img {
-    margin-top: 5px;
+    margin-top: 9px;
     margin-left: 8px;
     margin-right: 14px; /* Устанавливаем отступ справа от изображения */
     width: 37px;
     height: 36px;
 }
 p{
-    font-family: tahoma, arial, verdana, sans-serif, "Lucida Sans";
+    font-family: Verdana;
     font-size: 16px;
-    margin-top: 20px;
+    
+    margin-top: 18px;
     margin-bottom: 8px;
-    letter-spacing: 0.5px;
+    
 }
 div.field {    
     margin-bottom: 20px;
@@ -58,10 +67,10 @@ div.field label {
     float: left;
     width: 80px;
     height: 26px;
-    margin-top: 4px;
+    margin-top: 3px;
     text-align: right;
     margin-right: 6px;
-    font-size: 17px;
+    font-size: 16px;
     color: #787878;
     
    }
@@ -69,7 +78,7 @@ div.field label {
 input{
     padding-bottom: 4px;
     padding-top: 4px;
-    padding-right: 42px;
+    padding-right: 45px;
 }
 input[type="password"]{
     margin-bottom: 45px;
@@ -83,12 +92,11 @@ select{
     border: 1px solid #c6c7cc;
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .1);
     color: black;
-    padding-top: 3px;
-    padding-bottom: 3px;
-    width: 206px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    padding-right: 14px;
     text-align: right;
-    margin-right: 6px;
-    margin-left: 4px;
+    margin-top: -3px; 
     font-size: 16px;
         
   }
@@ -97,13 +105,13 @@ select option{
     text-align: left;
   }
 .country{
-margin-left: 20px;
-font-size: 17px;
-color: #787878;
+    margin-left: 21px;
+    font-size: 16px;
+    color: #787878;
 }
 .city{
-    margin-left: 32px;
-    font-size: 17px;
+    margin-left: 33px;
+    font-size: 16px;
     color: #787878;
 
 }
@@ -111,39 +119,37 @@ color: #787878;
     margin-top:5px;
  
 }
-.line3{
-    border-bottom: 2px solid rgba(230, 235, 241, 1);
-    padding-bottom: 4px;
-    margin-bottom: 3px;
-}
 
 .school{
-    margin-top: 4px;
     margin-left: 22px;
-    font-size: 17px;
+    font-size: 16px;
     color: #787878;
 }
-.University{
-    margin-left: 50px;
-    padding-top: 10px;
-    font-size: 17px;
+
+
+form .University{
+    margin-left:51px;
+    margin-top: 4px;
+    font-size: 16px;
     color: #787878;
 }
 .btn{
-    padding: 4px 55px 4px 55px;
-    margin-top: 30px;
-    margin-left: 40px;
-    font-size: 16px;
+    padding: 3px 47px 3px 47px;
+    margin-top: 32px;
+    margin-left: 41px;
+    font-size: 17px;
 }
-abbr{
-    font-size: 14px;
+div.field abbr {    
+    font-size: 13px;
     color: rgb(162, 162, 162);
+    margin-left: 3px;
+    padding-top: 24px;
 }
 .qwe{
     color: #c6c7cc;
-    padding-left: 40px;
-    font-size: 13px;
-    margin-top: 5px;
+    padding-left: 43px;
+    font-size: 12px;
+    margin-top: 1px;
     
 }
 .qwe a{
@@ -152,9 +158,9 @@ abbr{
 }
 .asd{
     color: #444444;
-    padding-left: 94px;
-    font-size: 13px;
-    margin-top: 4px;
+    padding-left: 97px;
+    font-size: 12px;
+    margin-top: -1px;
 }
 
 
